--- a/Notebooks/Modeling.ipynb
+++ b/Notebooks/Modeling.ipynb
@@ -1576,6 +1576,158 @@
    "source": [
     "names.Single().value"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projections\n",
+    "\n",
+    "To populate a user interface, a specification will need to add details to its results.\n",
+    "To accomplish this, create an object in the `select` clause.\n",
+    "The object can include properties that are computed from child specifications.\n",
+    "\n",
+    "For the blog application, we'll want to display a list of sites.\n",
+    "The user will need to see the name of each site in the list.\n",
+    "Let's modify the `sitesByUser` specification to include the names of each site."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, Names = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[System.String] }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr><tr><td>Names</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ My Journal ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><div class=\"dni-plaintext\"><pre>[ My Journal ]</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var sitesByUser = Given<User>.Match((user, facts) =>\n",
+    "    from site in facts.OfType<Site>()\n",
+    "    where site.creator == user\n",
+    "    where !facts.Any<SiteDeleted>(\n",
+    "        sd => sd.site == site &&\n",
+    "        !facts.Any<SiteRestored>(sr => sr.deleted == sd))\n",
+    "    // Select an anonymous object with information about the site\n",
+    "    select new\n",
+    "    {\n",
+    "        // Include the site fact\n",
+    "        Site = site,\n",
+    "        // Get the list of names for the site\n",
+    "        Names =\n",
+    "            from name in facts.OfType<SiteName>()\n",
+    "            where name.site == site\n",
+    "            where !facts.Any<SiteName>(next => next.prior.Contains(name))\n",
+    "            // Pick the value, not the fact\n",
+    "            select name.value\n",
+    "    });\n",
+    "\n",
+    "var sites = await jinagaClient.Query(sitesByUser, user);\n",
+    "\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this structure, the user interface can generate a list of sites.\n",
+    "The `Names` property is going to be a collection of names, not a single value.\n",
+    "The user interface might use `FirstOrDefault` to turn it into a single value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal, Site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM } }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr><tr><td>Site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var sitesViewModel = sites.Select(s => new\n",
+    "{\n",
+    "    Name = s.Names.FirstOrDefault() ?? \"New site\",\n",
+    "    s.Site\n",
+    "});\n",
+    "\n",
+    "sitesViewModel"
+   ]
   }
  ],
  "metadata": {
