Describe a tree view

--- a/Notebooks/Modeling.ipynb
+++ b/Notebooks/Modeling.ipynb
@@ -1675,13 +1675,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal, Site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM } }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr><tr><td>Site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -1722,8 +1722,7 @@
    "source": [
     "var sitesViewModel = sites.Select(s => new\n",
     "{\n",
-    "    Name = s.Names.FirstOrDefault() ?? \"New site\",\n",
-    "    s.Site\n",
+    "    Name = s.Names.FirstOrDefault() ?? \"New site\"\n",
     "});\n",
     "\n",
     "sitesViewModel"
@@ -1976,13 +1975,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal, Domain = example.com, Site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM } }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr><tr><td>Domain</td><td><div class=\"dni-plaintext\"><pre>example.com</pre></div></td></tr><tr><td>Site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal, Domain = example.com }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr><tr><td>Domain</td><td><div class=\"dni-plaintext\"><pre>example.com</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -2047,8 +2046,7 @@
     "var sitesViewModel = sites.Select(s => new\n",
     "{\n",
     "    Name = s.Names.FirstOrDefault() ?? \"New site\",\n",
-    "    Domain = s.Domains.FirstOrDefault() ?? \"\",\n",
-    "    s.Site\n",
+    "    Domain = s.Domains.FirstOrDefault() ?? \"\"\n",
     "});\n",
     "\n",
     "sitesViewModel"
@@ -2695,13 +2693,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Title = My Second Post, Post = Post { site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, author = Jinaga.User, createdAt = 5/18/2024 4:20:17 PM } }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Title</td><td><div class=\"dni-plaintext\"><pre>My Second Post</pre></div></td></tr><tr><td>Post</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Post { site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, author = Jinaga.User, createdAt = 5/18/2024 4:20:17 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr><tr><td>author</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 16:20:17Z</span></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Title = My Second Post }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Title</td><td><div class=\"dni-plaintext\"><pre>My Second Post</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -2742,11 +2740,188 @@
    "source": [
     "var postsViewModel = posts.Select(p => new\n",
     "{\n",
-    "    Title = p.Title.FirstOrDefault() ?? \"New post\",\n",
-    "    p.Post\n",
+    "    Title = p.Title.FirstOrDefault() ?? \"New post\"\n",
     "});\n",
     "\n",
     "postsViewModel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tree View\n",
+    "\n",
+    "If your application calls for it, you can display the hierarchy in a single view.\n",
+    "You probably wouldn't do this for a blog application, but I'll demonstrate how this is done.\n",
+    "\n",
+    "Define a specification that starts at the top level, in this case the creator `User` of the sites.\n",
+    "Then extend that specification with child specifications in the `select` clause.\n",
+    "Continue for as many levels as you would like to display in the tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, Names = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[System.String], Domains = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[System.String], Posts = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[&lt;&gt;f__AnonymousType0#39`2[S...</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td><div class=\"dni-plaintext\"><pre>--- FAKE USER ---</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 14:41:14Z</span></td></tr></tbody></table></div></details></td></tr><tr><td>Names</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ My Journal ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><div class=\"dni-plaintext\"><pre>[ My Journal ]</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>Domains</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ example.com ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><div class=\"dni-plaintext\"><pre>[ example.com ]</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>Posts</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ { Post = Post { site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, author = Jinaga.User, createdAt = 5/18/2024 4:20:17 PM }, Title = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[System.String] } ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Post = Post { site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, author = Jinaga.User, createdAt = 5/18/2024 4:20:17 PM }, Title = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[System.String] }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Post</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Post { site = Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }, author = Jinaga.User, createdAt = 5/18/2024 4:20:17 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>site</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Site { creator = Jinaga.User, createdAt = 5/18/2024 2:41:14 PM }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>creator</td><td>Jinaga.User</td></tr><tr><td>createdAt</td><td>5/18/2024 2:41:14 PM</td></tr></tbody></table></div></details></td></tr><tr><td>author</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Jinaga.User</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>publicKey</td><td>--- FAKE USER ---</td></tr></tbody></table></div></details></td></tr><tr><td>createdAt</td><td><span>2024-05-18 16:20:17Z</span></td></tr></tbody></table></div></details></td></tr><tr><td>Title</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ My Second Post, Interesting Facts ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><div class=\"dni-plaintext\"><pre>[ My Second Post, Interesting Facts ]</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var sitesAndPostsByUser = Given<User>.Match((user, facts) =>\n",
+    "    from site in facts.OfType<Site>()\n",
+    "    where site.creator == user\n",
+    "    where !facts.Any<SiteDeleted>(\n",
+    "        sd => sd.site == site &&\n",
+    "        !facts.Any<SiteRestored>(sr => sr.deleted == sd))\n",
+    "    select new\n",
+    "    {\n",
+    "        Site = site,\n",
+    "        Names =\n",
+    "            from name in facts.OfType<SiteName>()\n",
+    "            where name.site == site\n",
+    "            where !facts.Any<SiteName>(next => next.prior.Contains(name))\n",
+    "            select name.value,\n",
+    "        Domains =\n",
+    "            from domain in facts.OfType<SiteDomain>()\n",
+    "            where domain.site == site\n",
+    "            where !facts.Any<SiteDomain>(next => next.prior.Contains(domain))\n",
+    "            select domain.value,\n",
+    "        Posts =\n",
+    "            from post in facts.OfType<Post>()\n",
+    "            where post.site == site\n",
+    "            where !facts.Any<PostDeleted>(pd => pd.post == post &&\n",
+    "                !facts.Any<PostRestored>(pr => pr.deleted == pd))\n",
+    "            select new\n",
+    "            {\n",
+    "                Post = post,\n",
+    "                Title =\n",
+    "                    from title in facts.OfType<PostTitle>()\n",
+    "                    where title.post == post\n",
+    "                    where !facts.Any<PostTitle>(next => next.prior.Contains(title))\n",
+    "                    select title.value\n",
+    "            }\n",
+    "    });\n",
+    "\n",
+    "var sitesAndPosts = await jinagaClient.Query(sitesAndPostsByUser, user);\n",
+    "\n",
+    "sitesAndPosts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a hierarchical view model by selecting the child view models from the child objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Name = My Journal, Domain = example.com, Posts = System.Linq.Enumerable+&lt;OfTypeIterator&gt;d__66`1[&lt;&gt;f__AnonymousType0#39`2[Submission#34+Post,System.Linq.IQueryable`1[System.String]]].Select(p =&gt; new &lt;&gt;f__AnonymousType1#43`1(Title = (p.Title.FirstOrDefault() ?? &quot;New post&quot;))) }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Name</td><td><div class=\"dni-plaintext\"><pre>My Journal</pre></div></td></tr><tr><td>Domain</td><td><div class=\"dni-plaintext\"><pre>example.com</pre></div></td></tr><tr><td>Posts</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>[ { Title = My Second Post } ]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td><i>(values)</i></td><td><table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>{ Title = My Second Post }</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>Title</td><td><div class=\"dni-plaintext\"><pre>My Second Post</pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "var sitesAndPostsViewModel = sitesAndPosts.Select(s => new\n",
+    "{\n",
+    "    Name = s.Names.FirstOrDefault() ?? \"New site\",\n",
+    "    Domain = s.Domains.FirstOrDefault() ?? \"\",\n",
+    "    Posts = s.Posts.Select(p => new\n",
+    "    {\n",
+    "        Title = p.Title.FirstOrDefault() ?? \"New post\"\n",
+    "    })\n",
+    "});\n",
+    "\n",
+    "sitesAndPostsViewModel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The hierarchical pattern described here works for models that have different kinds of objects at each level.\n",
+    "If you have a hierarchy that have the same kinds of objects at various levels -- such as folders that contain folders, or employees who manage other employees -- then the pattern is different.\n",
+    "We will discuss that elsewhere."
    ]
   }
  ],
