Output public key

--- a/Notebooks/Blog.ipynb
+++ b/Notebooks/Blog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -54,7 +54,7 @@
     "\n",
     "```json\n",
     "{\n",
-    "    \"HttpEndpoint\": \"https://dev.jinaga.com/....\",\n",
+    "    \"HttpEndpoint\": \"https://rep.jinaga.com/....\",\n",
     "    \"AuthorizationToken\": \"eyJh....\"\n",
     "}\n",
     "```"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -352,8 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -379,7 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Y-----"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "user.publicKey.Substring(user.publicKey.Length - 8, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -404,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
